--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "scripts": {
   "start": "node server",  
-  "dev": "node --watch server"
+  "dev": "node --watch --env-file=.env server"
 }
 
 }
