--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,32 @@
     "name": "CapeOutageAlerts",
     "short_name": "CapeOutageAlerts",
     "start_url": "/?home=true",
-    "icons": [],
+    "icons": [
+        {
+          "src": "images/manifest-icon-192.maskable.png",
+          "sizes": "192x192",
+          "type": "image/png",
+          "purpose": "any"
+        },
+        {
+          "src": "images/manifest-icon-192.maskable.png",
+          "sizes": "192x192",
+          "type": "image/png",
+          "purpose": "maskable"
+        },
+        {
+          "src": "images/manifest-icon-512.maskable.png",
+          "sizes": "512x512",
+          "type": "image/png",
+          "purpose": "any"
+        },
+        {
+          "src": "images/manifest-icon-512.maskable.png",
+          "sizes": "512x512",
+          "type": "image/png",
+          "purpose": "maskable"
+        }
+      ],
     "theme_color": "#000000",
     "background_color": "#FFFFFF",
     "display": "fullscreen",
