--- a/public/manifest.json
+++ b/public/manifest.json
@@ -30,7 +30,7 @@
       ],
     "theme_color": "#000000",
     "background_color": "#FFFFFF",
-    "display": "fullscreen",
+    "display": "standalone",
     "orientation": "potrait"
 
 }
