--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "web-push": "^3.6.7"
   },
   "scripts": {
-  "start": "node server",  
-  "dev": "node --watch --env-file=.env server"
-}
-
+    "start": "node server",
+    "dev": "node --watch --env-file=.env server"
+  }
 }
