--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "web-push": "^3.6.7"
   },
   "scripts": {
-    "start": "node server",
-    "dev": "node --watch --env-file=.env server"
+    "start": "node server.js",
+    "dev": "node --watch --env-file=.env server.js"
   }
 }
