--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "node-schedule": "^2.1.1",
     "web-push": "^3.6.7"
   },
   "scripts": {
