--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "node-schedule": "^2.1.1",
+    "sqlite3": "^5.1.7",
     "web-push": "^3.6.7"
   },
   "scripts": {
