--- a/manifest.json
+++ b/manifest.json
@@ -1,33 +1,21 @@
 {
   "name": "CapeOutageAlerts",
   "short_name": "COW",
-  "start_url": "/?home=true",
   "id": "/?homescreen",
+  "start_url": "/?homescreen",
   "scope": "/",
   "icons": [
     {
       "src": "images/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "images/manifest-icon-192.maskable.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "maskable any"
     },
     {
       "src": "images/manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "images/manifest-icon-512.maskable.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "maskable any"
     }
   ],
   "theme_color": "#000000",
