--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "CapeOutageAlerts",
+  "name": "CapeOutageWatch",
   "short_name": "COW",
   "id": "/?homescreen",
   "start_url": "/?homescreen",
